
8. Change: btree_io.new_file and new_cursor removed.  Declare the generic type parameter in the declaration using "btree_io.file( type )" or "btree_io.cursor( type )".

9. Change: dynamic_hash_tables.new_table removed.  Declare the generic type parameter in the declaration using "dynamic_hash_tables.table( type )".

10. Change: hash_io.new_file and new_cursor removed.  Declare the generic type parameter in the declaration using "hash_io.file( type )" or "hash_io.cursor( type )".

11. New: SHA digest functions: numerics.sha1_digest_of, numerics.sha256_digest_of, numerics.sha256_digest_of, numerics.sha512_digest_of. [tests needed]

12. New: code coverage reporting added to Makefile (e.g. make coverage).  Added more regression tests to improve test coverage.

13. Fix: lock_files.lock( file ... ) variation now handles wait and retry correctly.

14. Fix: btree_io.get_first, etc. with array or record type no longer report the variable wasn't written to. [record fields todo]

15. Fix: negative numbers weren't recognized in some JSON cases.  Corrected.

16. New: Base 64 functions: strings.to_base64, strings.to_string Base 64 version.

17. Change: Updated directory_operations and created positive regression tests for it.

18. Change: pragma session_import_script, session_export_script and prompt_script not allowed in a restricted shell (as a security precaution).

19. Fix: numerics.rnd() no longer occasionally produces a number too high.

20. Fix: private fields in records and arrays of private elements can no longer be encoded as JSON.  Even though data is stored as strings, a private type is supposed to be a black box.

21. Fix: canlendar.time values are no longer parsed by the "?" command at syntax time.  They were causing an index_error.

22. Fix: calendar.time arithmetic working properly (probably broken when castToType was implemented).
