@@ -57,6 +57,7 @@ It provides form processing, string encoding, and cookie operations.</p>
   <a href="#cgi.line_count_of_value">line_count_of_value</a>        <a href="#cgi.line">line( v )</a>                  <a href="#cgi.value_of_line">value_of_line( k, p )</a>
   <a href="#cgi.url_decode">url_decode</a>                 <a href="#cgi.url_encode">url_encode( s )</a>            <a href="#cgi.html_encode">html_encode( s )</a>
   <a href="#cgi.set_cookie">set_cookie( k,v,e,p,d,s )</a>  <a href="#cgi.cookie_value">cookie_value( p )</a>          <a href="#cgi.cookie_count">cookie_count</a>
+  <a href="#cgi.key_value">s := key_value( p )</a>
 </pre>
         &nbsp;<br>
         <div class="code_caption">
@@ -574,7 +575,7 @@ with the the given name.</p></td>
 </tr>
 </table>
 
-<a name="cgi.key_value"></a><h3>n := cgi.key_value( p )</h3>
+<a name="cgi.key_value"></a><h3>s := cgi.key_value( p )</h3>
 <table cellspacing="0" cellpadding="0" width="98%" summary="package call">
 <tr>
 <td width="15%">&nbsp;</td>
